# lychee-worker

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  build.rs  composer.json  configure  phpstan.neon  phpunit.xml  pie.json
.github/workflows/: ci.yml  release.yml
rust/src/: http.rs  lib.rs  php_api.rs  runtime.rs  sse.rs  stats.rs  watcher.rs  websocket.rs
scripts/: install.sh
src/: Manager.php  Service.php  Websocket.php
src/command/: Server.php  WorkerChild.php  WorkerDev.php  WorkerQueue.php  WorkerStatus.php
src/config/: worker.php
stubs/: lychee_worker.php  thinkphp_helpers.php
tests/: bootstrap.php
tests/feature/: HttpTest.php  ManagesWorkerServer.php  QueueTest.php  SseTest.php  WebsocketTest.php
tests/stub/: think
tests/stub/app/: service.php
tests/stub/app/controller/: Index.php
tests/stub/app/job/: TestJob.php
tests/stub/config/: app.php  cache.php  queue.php  worker.php
tests/stub/route/: app.php
